update README.md in make-web and website

--- a/make-web/mkdocs.yml
+++ b/make-web/mkdocs.yml
@@ -1,12 +1,5 @@
 nav:
 - HIT-FC-OpenCS: index.md
-- 人工智能:
-  - 人工智能数学基础: 人工智能\人工智能数学基础.md
-  - 模式识别与机器学习: 人工智能\模式识别与机器学习.md
-- 信息安全:
-  - 信息内容安全: 信息安全\信息内容安全.md
-  - 密码学: 信息安全\密码学.md
-  - 软件安全: 信息安全\软件安全.md
 - 公共课程:
   - 信息安全数学基础: 公共课程\信息安全数学基础.md
   - 形式语言与自动机: 公共课程\形式语言与自动机.md
@@ -21,18 +14,26 @@ nav:
   - 计算机组成原理: 公共课程\计算机组成原理.md
   - 计算机网络: 公共课程\计算机网络.md
   - 集合论与图论: 公共课程\集合论与图论.md
-- 数据科学与大数据技术:
-  - 大数据分析: 数据科学与大数据技术\大数据分析.md
-  - 大数据计算基础: 数据科学与大数据技术\大数据计算基础.md
-- 网络空间安全:
-  - 互联网基础设施安全: 网络空间安全\互联网基础设施安全.md
-  - 网络攻防技术: 网络空间安全\网络攻防技术.md
 - 计算机科学与技术:
   - 嵌入式系统设计与实现: 计算机科学与技术\嵌入式系统设计与实现.md
   - 计算机体系结构: 计算机科学与技术\计算机体系结构.md
   - 计算理论: 计算机科学与技术\计算理论.md
+- 人工智能:
+  - 人工智能数学基础: 人工智能\人工智能数学基础.md
+  - 模式识别与机器学习: 人工智能\模式识别与机器学习.md
+- 数据科学与大数据技术:
+  - 大数据分析: 数据科学与大数据技术\大数据分析.md
+  - 大数据计算基础: 数据科学与大数据技术\大数据计算基础.md
+- 信息安全:
+  - 信息内容安全: 信息安全\信息内容安全.md
+  - 密码学: 信息安全\密码学.md
+  - 软件安全: 信息安全\软件安全.md
+- 网络空间安全:
+  - 互联网基础设施安全: 网络空间安全\互联网基础设施安全.md
+  - 网络攻防技术: 网络空间安全\网络攻防技术.md
 - 软件工程: []
 - 选修课程:
   - GPU计算: 选修课程\GPU计算.md
+repo_url: https://github.com/HIT-FC-OpenCS/CS_Courses
 site_name: HIT-FC-OpenCS
 theme: readthedocs
