add major 物联网工程

--- a/make-web/mkdocs.yml
+++ b/make-web/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
 - 数据科学与大数据技术:
   - 大数据分析: 数据科学与大数据技术\大数据分析.md
   - 大数据计算基础: 数据科学与大数据技术\大数据计算基础.md
+- 物联网工程: []
 - 信息安全:
   - 信息内容安全: 信息安全\信息内容安全.md
   - 密码学: 信息安全\密码学.md
